7177409: Perf regression in JVM_GetClassDeclaredFields after generic signature changes

In fieldDescriptor::generic_signature() returns NULL immediately if the field has no generic signature.

Reviewed-by: dholmes, coleenp, jcoomes